tests/baselines/reference/privateNameInObjectLiteral-1.errors.txt
privateNameInObjectLiteral-1.ts(2,5): error TS18016: Private identifiers are not allowed outside class bodies.


==== privateNameInObjectLiteral-1.ts (1 errors) ====
    const obj = {
        #foo: 1
        ~~~~
!!! error TS18016: Private identifiers are not allowed outside class bodies.
    };
    